correction contrast

--- a/style.css
+++ b/style.css
@@ -780,7 +780,7 @@ h4 {
 }
 
 .tc-white {
-    color:#f3976c!important;
+    color:#000!important;
 }
 
 .btn-atomic-tangerine {
